@@ -7,7 +7,6 @@ general:
         - add database format version check in db_connect{,2}
 	- change database routines to be less PostgreSQL dependant
 	- support for "DHCP only" entries without IP
-	- support for custom DHCP classes (groups)	
 	- add DNSSEC (tsig) support
 
 import:
